# BM_v0.3

./: README.md  pubspec.yaml
android/app/: build.gradle
assets/smartcontracts/: user_contract.json
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: already_have_account_check.dart  background.dart  constant.dart  importLoginAccount.dart  import_blockchain_account_check.dart  profile_input_field.dart  rounded_button.dart  rounded_input_field.dart  rounded_input_text_field.dart  rounded_password_field.dart  text_field_container.dart
lib/contracts/: messenger_contract.dart
lib/database/: dbHelper.dart
lib/models/: chat_provider_model.dart  friend_list_management.dart  (+3 more)
linux/: CMakeLists.txt  my_application.cc
native_add/: pubspec.yaml
native_add/android/src/main/clientNode/: CMakeLists.txt
native_add/android/src/main/clientNode/ICEGathering/: ICECandidatesAdapter.h  ICEGathering.cpp
native_add/android/src/main/clientNode/ICEGathering/HostInterfaces/: NetworkInterfaces.h  NetworkInterfacesFactory.cpp  NetworkInterfacesFactory.h  NetworkInterfacesUnix.cpp  NetworkInterfacesUnix.h  NetworkInterfacesWindows.cpp  NetworkInterfacesWindows.h
native_add/android/src/main/clientNode/ICEGathering/STUNInterfaces/: NATTraversalAdapter.cpp  NATTraversalAdapter.hpp
native_add/android/src/main/clientNode/P2PCommunication/: BMDataChannel.cpp  BMDataChannel.hpp  UDPCommunication.cpp  UDPCommunication.hpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+38 files in other folders)
